--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "start": "node index"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,13 @@
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
     "babel-register": "^6.24.1",
-    "nodemon": "^1.11.0"
+    "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "http-proxy": "^1.16.2",
+    "node-sass": "^4.5.2",
+    "nodemon": "^1.11.0",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
