--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.2"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
@@ -23,6 +24,7 @@
     "http-proxy": "^1.16.2",
     "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
+    "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "webpack-dev-server": "^2.4.5"
