--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "eatery",
   "version": "1.0.0",
-  "description": "",
+  "engines": {
+    "node": "6.9.2"
+  },
+  "description": "Grab a bite :)",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "dev": "node index",
+    "start": "NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors"
   },
-  "author": "",
+  "author": "Santiago Suarez",
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.4",
     "angular-ui-router": "^0.4.2",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "webpack": "^2.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
