--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "angular": "^1.6.4",
     "angular-ui-router": "^0.4.2",
     "express": "^4.15.2",
-    "webpack": "^2.4.1"
+    "webpack": "^2.4.1",
+    "extract-text-webpack-plugin": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
@@ -25,7 +26,6 @@
     "babel-preset-env": "^1.4.0",
     "babel-register": "^6.24.1",
     "css-loader": "^0.28.0",
-    "extract-text-webpack-plugin": "^2.1.0",
     "http-proxy": "^1.16.2",
     "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
