--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
   "main": "index.js",
   "scripts": {
     "dev": "node index",
-    "start": "NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors"
+    "start": "nf start",
+    "postinstall": "webpack -p --config ./webpack.prod.config.js --progress --colors"
   },
   "author": "Santiago Suarez",
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.4",
     "angular-ui-router": "^0.4.2",
-    "express": "^4.15.2",
-    "webpack": "^2.4.1",
-    "extract-text-webpack-plugin": "^2.1.0"
+    "express": "^4.15.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
@@ -26,12 +25,14 @@
     "babel-preset-env": "^1.4.0",
     "babel-register": "^6.24.1",
     "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "http-proxy": "^1.16.2",
     "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
     "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
+    "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
   }
 }
