Revert back to 517fb3c to start working on dev

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "angular": "^1.6.4",
     "angular-ui-router": "^0.4.2",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "webpack": "^2.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
