--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "angular": "^1.6.4",
     "angular-ui-router": "^0.4.2",
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "mongodb": "^2.2.26",
+    "mongoose": "^4.9.7",
     "webpack": "^2.4.1"
   },
   "devDependencies": {
