--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "gulp"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +25,13 @@
     "babel-register": "^6.24.1",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "gulp": "^3.9.1",
+    "gulp-angular-templatecache": "^2.0.0",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-notify": "^3.0.0",
+    "gulp-rename": "^1.2.2",
+    "html-webpack-plugin": "^2.28.0",
+    "http-loader": "0.0.1",
     "http-proxy": "^1.16.2",
     "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
