--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "gulp"
+    "start": "gulp",
+    "test": "mocha --timeout 10000"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "express": "^4.15.2",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.7",
+    "morgan": "^1.8.1",
     "ngmap": "^1.18.4",
     "webpack": "^2.4.1"
   },
@@ -27,6 +29,8 @@
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
     "babel-register": "^6.24.1",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "gulp": "^3.9.1",
@@ -37,6 +41,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-loader": "0.0.1",
     "http-proxy": "^1.16.2",
+    "mocha": "^3.3.0",
     "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
     "postcss-loader": "^1.3.3",
