--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "gulp",
-    "test": "mocha --timeout 10000"
+    "test": "NODE_ENV=test && mocha --timeout 2000"
   },
   "author": "",
   "license": "ISC",
@@ -15,12 +15,17 @@
     "angular-aria": "^1.6.4",
     "angular-material": "^1.1.4",
     "angular-ui-router": "^0.4.2",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
+    "express-jwt": "^5.3.0",
+    "jsonwebtoken": "^7.4.0",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.7",
     "morgan": "^1.8.1",
     "ngmap": "^1.18.4",
+    "passport": "^0.3.2",
     "webpack": "^2.4.1"
   },
   "devDependencies": {
@@ -31,6 +36,7 @@
     "babel-register": "^6.24.1",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "chai-jwt": "^2.0.0",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "gulp": "^3.9.1",
