--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "eatery",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node" : "7.10.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "gulp",
@@ -15,7 +18,7 @@
     "angular-animate": "^1.6.4",
     "angular-aria": "^1.6.4",
     "angular-material": "^1.1.4",
-    "angular-ui-router": "^0.4.2",
+    "angular-ui-router": "^1.0.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
@@ -52,7 +55,7 @@
     "nodemon": "^1.11.0",
     "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.1",
+    "style-loader": "^0.17.0",
     "webpack-dev-server": "^2.4.5"
   }
 }
