--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "angular-animate": "^1.6.4",
     "angular-aria": "^1.6.4",
     "angular-material": "^1.1.4",
-    "angular-ui-router": "^1.0.0",
+    "angular-ui-router": "0.4.2",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
