--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "node" : "7.10.0"
+    "node": "7.10.0"
   },
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-jwt": "^5.3.0",
     "jsonwebtoken": "^7.4.0",
